# secrets-replicator

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_ARCHITECTURE.md  IAM_SETUP_OLD.md  IMPLEMENTATION_PLAN.md  LICENSE  NAMING-CONVENTIONS.md  NEXT_STEPS.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PHASE5_SUMMARY.md  PHASE6_SUMMARY.md  PHASE7_SUMMARY.md  PHASE8_SUMMARY.md  README.md  SECURITY.md  TESTING.md  VARIABLE_EXPANSION_DESIGN.md  WORKFLOWS.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sam_template.yml  setup.py  template.yaml
.github/workflows/: ci.yml  deploy-dev.yml  deploy-release-to-prod.yml  deploy-release-to-qa.yml  deploy-to-dev.yml  deploy.yml  junk  publish-release-to-sar.yml  publish-sar.yml  release-prod.yml  release-qa.yml  release.yml  test-sar.yml
docs/: ARCHITECTURE_PROPOSAL.md  IMPLEMENTATION_PROGRESS.md  MULTI_REGION_ARCHITECTURE.md  PHASE1_SUMMARY.md  PHASE2_PROGRESS.md  SECRETS_FILTER_IMPLEMENTATION.md  architecture-decisions.md  cicd.md  github-actions-sar-testing.md  iam-policies.md  multi-account-deployment.md  sar-publishing.md  testing-sar.md  testing.md  transformations.md  troubleshooting.md
examples/: config-custom-variables.json  cross-account-region.yaml  cross-account.yaml  cross-region.yaml  multi-region.yaml  same-region.yaml  sedfile-basic.sed  sedfile-json.json  sedfile-regions.sed  sedfile-variables-json.json  sedfile-variables-region.sed
iam/: POLICY-COMPARISON.md  README.md  UPDATE-GITHUB-ACTIONS-POLICY.md  apply-policy-update.sh  github-actions-policy.json  github-actions-role-policy-FIXED.json  github-actions-role-policy-UPDATED.json  github-actions-role-policy.json
scripts/: ci-tests.sh  cleanup-test-secrets.sh  cleanup.sh  cost-calculator.py  deploy.sh  fix-failed-stack.sh  publish-multi-region.sh  run-tests.sh  setup-test-secrets.sh  share-sar-app.sh  test-replication.sh
sedfiles/: default.sed  example.sed
src/: aws_clients.py  config.py  event_parser.py  exceptions.py  filters.py  handler.py  logger.py  metrics.py  name_mappings.py  retry.py  sedfile_loader.py  transformer.py  utils.py
tests/fixtures/: eventbridge_events.py
tests/integration/: conftest.py  test_cross_region.py  test_error_scenarios.py  test_same_region.py  test_security.py
tests/performance/: __init__.py  conftest.py  test_performance.py
tests/unit/: conftest.py  test_aws_clients.py  test_config.py  test_event_parser.py  test_filtering.py  test_handler.py  test_handler_integration.py  test_handler_name_resolution.py  test_logger.py  test_manual_trigger.py  test_metrics.py  test_name_mappings.py  test_retry.py  test_sedfile_loader.py  test_transformer.py  test_utils.py
