[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secrets-replicator"
dynamic = ["version"]
description = "AWS Lambda function for replicating and transforming secrets across regions and accounts"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Devopspolis", email = "devopspolis@example.com"}
]
keywords = ["aws", "secrets-manager", "lambda", "replication", "disaster-recovery"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "boto3>=1.34.0",
    "botocore>=1.34.0",
    "tenacity>=8.2.3",
    "jsonpath-ng>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "moto>=4.2.0",
    "black>=23.0.0",
    "pylint>=3.0.0",
    "mypy>=1.7.0",
    "boto3-stubs[secretsmanager,s3,sts,cloudwatch,sqs]>=1.34.0",
    "bandit[toml]>=1.7.5",
    "safety>=2.3.0",
]

[project.urls]
Homepage = "https://github.com/devopspolis/secrets-replicator"
Documentation = "https://github.com/devopspolis/secrets-replicator/blob/main/README.md"
Repository = "https://github.com/devopspolis/secrets-replicator"
"Bug Tracker" = "https://github.com/devopspolis/secrets-replicator/issues"

[tool.black]
line-length = 100
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Exclude build artifacts
  \.aws-sam
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
  | htmlcov
  | \.pytest_cache
)/
'''

[tool.pylint.main]
jobs = 0
py-version = "3.12"
suggestion-mode = true
fail-under = 8.0

[tool.pylint.messages_control]
disable = [
    "C0103",  # invalid-name (for short variable names)
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods (for dataclasses)
    "R0913",  # too-many-arguments
    "W0212",  # protected-access (for testing)
    "fixme",  # TODO comments
    "duplicate-code",  # Allow some duplication in tests
]

[tool.pylint.format]
max-line-length = 100
indent-string = "    "

[tool.pylint.design]
max-args = 8
max-locals = 20
max-returns = 6
max-branches = 15
max-statements = 60

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "cross_region: marks tests as cross-region (requires two AWS regions)",
    "cross_account: marks tests as cross-account (requires second AWS account)",
    "performance: marks tests as performance tests",
    "benchmark: marks tests as benchmark tests",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true

[tool.coverage.html]
directory = "htmlcov"

[tool.bandit]
exclude_dirs = [
    "tests",
    "venv",
    ".venv",
    ".aws-sam",
]
skips = [
    "B101",  # assert_used - OK in tests
    "B601",  # paramiko_calls - not used
]

[tool.bandit.assert_used]
skips = ["*/test_*.py", "tests/*"]

[tool.setuptools_scm]
# Version is derived from git tags (e.g., v1.0.0 -> 1.0.0)
# For dev builds, set SETUPTOOLS_SCM_PRETEND_VERSION env var
# Example: SETUPTOOLS_SCM_PRETEND_VERSION=0.0.dev123
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
